# TechEngine

./: .gitmodules  LICENSE  README.md  docker-compose.yml  integrity_check.py  passmark_ids.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: bump-techapi.yml  coverage-report.yml  deploy-pages.yml  dump-refresh.yml  notify-techapi.yml  refresh-data.yml  techapi-pr-validation-comment.yml  techapi-verify-comment.yml  test.yml  validate-data.yml  verify-network.yml  verify-status.yml  weekly-ingest.yml  weekly-refresh.yml
app/: config.py  data_root.py  dump.py  main.py  seed.py  validate.py
app/coverage/: __init__.py  __main__.py  curated.py  normalize.py  report.py
app/ingest/: __init__.py  __main__.py  enrich.py  normalize.py  pipeline.py
app/models/: __init__.py  brand.py  cpu.py  game.py  gpu.py  laptop.py  mobile_device.py  monitor.py  smartphone.py  software.py
app/routers/: cpus.py  games.py  gpus.py  laptops.py  mobile_devices.py  monitors.py  smartphones.py  socs.py  software.py
app/schemas/: __init__.py  brand.py  common.py  cpu.py  game.py  gpu.py  laptop.py  mobile_device.py  monitor.py  serializers.py  smartphone.py  soc.py  software.py
app/services/: scoring.py
app/verify/: __init__.py  __main__.py  cli.py  common.py  crossref.py  hosts.py  http_check.py  ledger.py  offline.py  promote.py  signals.py
config/: scoring.yaml
docs/: DATA_PIPELINE.md  DEVELOPMENT.md  SPEC.md
site/: .gitignore  astro.config.mjs  package-lock.json  package.json
tests/: conftest.py
tests/integration/: game_fixtures.py  laptop_fixtures.py  mobile_device_fixtures.py  monitor_fixtures.py  software_fixtures.py  test_brands.py  test_cpus.py  test_dump.py  test_games.py  test_gpus.py  test_laptops.py  test_meta.py  test_mobile_devices.py  test_monitors.py  test_smartphones.py  test_socs.py  test_software.py
tests/unit/: test_bulk_benchmark_sources.py  test_coverage_curated.py  test_coverage_normalize.py  test_coverage_report.py  test_coverage_wikipedia_parser.py  test_data_validation.py  test_gpu_sources.py  test_ingest_gpu_parsers.py  test_ingest_normalize.py  test_ingest_pipeline.py  (+13 more)
(+36 files in other folders)
