[project]
name = "techengine"
version = "0.1.0"
description = "Validation + ingestion engine for the TechAPI dataset"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "GTA Foundation", email = "team@techapi.dev" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "scalar-fastapi>=1.0.3",
    "httpx>=0.27",            # TestClient (app/dump.py) + HTTP for app/coverage sources
    "beautifulsoup4>=4.12",   # HTML parsing for app/coverage Wikipedia sources
    "pyyaml>=6",              # config/scoring.yaml (§8.2 scoring weights + reference scales)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6",
]

[project.urls]
Homepage = "https://techapi.dev"
Repository = "https://github.com/GetTechAPI/TechEngine"
Data = "https://github.com/Seungpyo1007/TechAPI"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "slow: full-dataset scans (deselect with -m 'not slow')",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/main.py",
    # verify CLI orchestration is integration-tested (score/pr smoke), not unit-
    # tested line-by-line; the verify logic modules (signals/offline/promote/...)
    # are unit-covered.
    "app/verify/cli.py",
    "app/verify/__main__.py",
    # calibrate is a maintainer CLI (suggests reference scales), not run in CI.
    "app/services/scoring/calibrate.py",
]
